check_metadata_consistency.js is flaky because failSnapshotReads is not selective

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.1.0-rc0
    • Affects Version/s: 9.1.0-rc0, 9.0.0
    • Component/s: Sharding
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2026-08-31
    • 🟥 DDL
    • None
    • None
    • None
    • None
    • None
    • None

      SERVER-132175 added a test case in check_metadata_consistency.js that makes a few snapshot reads fail with SnapshotUnavailable and then checks that checkMetadataConsistency retried internally.

       

      However the failSnapshotReads failpoint is not selective for checkMetadataConsistency, so the retries may be consumed by background activity (e.g. catalog cache, ShardRegistry, ClusterServerParameterRefresher), so the check that the error was retried internally by checkMetadataConsistency will fail.

       

      We should make the failpoint specifically target checkMetadataConsistency, excluding background activity.

            Assignee:
            Joan Bruguera Micó
            Reporter:
            Joan Bruguera Micó
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: