SERVER-133739 Make failSnapshotReads fail point selective for check_metadata_consistency.js (#61355)

GitOrigin-RevId: 17e0c2a25df3be097aa435ece51d7ce4324cf325